objects/Mapping_Parent_Obj__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default_Mapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_Name__c</fullName>
        <label>Mapping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Parties__c</fullName>
        <label>Number Of Parties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Obj_Name__c</fullName>
        <label>Parent Obj Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_File_Name__c</fullName>
        <label>Template File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>folder_name__c</fullName>
        <label>folder name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Mapping Parent Obj</label>
    <nameField>
        <label>Mapping Parent Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Parent Objs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>